tests/sksl/errors/ReservedNameDmat3.glsl
### Compilation failed:

error: 1: name 'dmat3' is reserved
int dmat3, dmat3x2, dmat3x3, dmat3x4;
    ^^^^^
error: 1: name 'dmat3x2' is reserved
int dmat3, dmat3x2, dmat3x3, dmat3x4;
           ^^^^^^^
error: 1: name 'dmat3x3' is reserved
int dmat3, dmat3x2, dmat3x3, dmat3x4;
                    ^^^^^^^
error: 1: name 'dmat3x4' is reserved
int dmat3, dmat3x2, dmat3x3, dmat3x4;
                             ^^^^^^^
4 errors
